stops snapping to page when screen too small

--- a/styles/using.css
+++ b/styles/using.css
@@ -159,8 +159,12 @@ a.activecolor{
 
 .heading {
     font-family: "Lato", sans-serif;
-    font-size: 1.25em;
+    font-size: 1.5em;
     padding-bottom: .33em;
+}
+
+.heading.bio{
+    margin-left: 16px;
 }
 
 .screen4,
@@ -174,7 +178,7 @@ a.activecolor{
 .inner {
     min-height: 100dvh;
     width: 100%;
-    scroll-snap-align: start;
+    /* scroll-snap-align: start; */
     background-color: #E9F1F5;
 }
 
@@ -205,7 +209,7 @@ body {
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     color: #0C0C0C;
     padding: 25px;
-    border-radius: 6px;
+    border-radius: 16px;
     position: relative;
 }
 
@@ -248,6 +252,13 @@ body {
     letter-spacing: 10px;
     margin-top: -60px;
     padding-left: 10px;
+}
+
+img.headshot{
+    border-radius: 16px;
+    max-width: 240px;
+    float: left;
+    margin-right: 10px;
 }
 
 .bounce {
